--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     .products-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; margin-top: 20px; }
     .product-card { background: #fff; border-radius: var(--radius); overflow: hidden; box-shadow: 0 3px 10px rgba(0,0,0,.1); transition: transform .3s, box-shadow .3s; position: relative; }
     .product-card:hover { transform: translateY(-3px); box-shadow: 0 10px 20px rgba(0,0,0,.15); }
-    .product-image { height: 200px; background: #f8f9fa; display: flex; align-items: center; justify-content: center; position: relative; }
-    .product-image img { max-width: 80%; max-height: 80%; object-fit: contain; }
+    .product-image { height: 260px; background: #f8f9fa; display: flex; align-items: center; justify-content: center; position: relative; }
+    .product-image img { max-width: 90%; max-height: 90%; object-fit: contain; }
     .product-badge { position: absolute; top: 10px; right: 10px; background: var(--primary); color: #fff; padding: 5px 10px; border-radius: 20px; font-size: .8rem; font-weight: 700; }
     .product-info { padding: 15px; }
     .product-title { font-size: 1.1rem; font-weight: 700; margin-bottom: 10px; color: var(--dark); height: 50px; overflow: hidden; }
@@ -87,10 +87,10 @@
     .cart-actions { margin-top: 20px; display: flex; justify-content: flex-end; gap: 10px; }
 
     .modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,.5); z-index: 2000; align-items: center; justify-content: center; }
-    .modal-content { background: #fff; padding: 20px; border-radius: var(--radius); width: 95%; max-width: 520px; box-shadow: 0 5px 15px rgba(0,0,0,.3); }
+    .modal-content { background: #fff; padding: 20px; border-radius: var(--radius); width: 95%; max-width: 720px; box-shadow: 0 5px 15px rgba(0,0,0,.3); }
     .modal-content h3 { margin-bottom: 15px; color: var(--secondary); }
-    .modal-row { display: grid; grid-template-columns: 120px 1fr; gap: 15px; align-items: start; }
-    .modal-thumb { width: 120px; height: 120px; background: #f8f9fa; border-radius: 8px; display: flex; align-items: center; justify-content: center; overflow: hidden; }
+    .modal-row { display: grid; grid-template-columns: 240px 1fr; gap: 18px; align-items: start; }
+    .modal-thumb { width: 240px; height: 240px; background: #f8f9fa; border-radius: 8px; display: flex; align-items: center; justify-content: center; overflow: hidden; }
     .summary { background: #fafafa; border: 1px solid #eee; border-radius: 8px; padding: 12px; margin-top: 10px; font-size: .95rem; }
     .price-line { display: flex; justify-content: space-between; margin-top: 8px; }
     .modal-content label { display: block; margin: 12px 0 6px; font-weight: 700; }
@@ -115,7 +115,7 @@
       .products-grid { grid-template-columns: repeat(auto-fill, minmax(240px, 1fr)); }
       .cart-table { font-size: .85rem; }
       .modal-row { grid-template-columns: 1fr; }
-      .modal-thumb { width: 100%; height: 180px; }
+      .modal-thumb { width: 100%; height: 260px; }
     }
 
     @media (prefers-reduced-motion: reduce) {
@@ -836,6 +836,26 @@
         updateSubtotal();
       };
 
+      // Al cambiar el color en el modal, sincroniza imagen y precio
+      colorSel.onchange = () => {
+        const cname = colorSel.value;
+        let imgUrl = product.image;
+        if (product.images) {
+          imgUrl = product.images[cname] || imgUrl;
+          if (imgUrl === product.image) {
+            for (const k of Object.keys(product.images)) {
+              if (((typeof fixText==='function')?fixText(k):k) === cname) { imgUrl = product.images[k]; break; }
+            }
+          }
+        }
+        const img = document.getElementById('review-image');
+        if (img) img.src = imgUrl;
+        const u = getUnitPrice(product, sizeSel.value, cname);
+        priceEl.dataset.unitPrice = String(u);
+        priceEl.textContent = Number(u).toLocaleString('es-AR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+        updateSubtotal();
+      };
+
       const qtyInput = document.getElementById('review-qty');
       const stockInfo = document.getElementById('review-stock');
       const stock = product.stock || 9999;
@@ -899,7 +919,27 @@
         sizeSel.appendChild(opt);
       });
       sizeSel.onchange = () => {
-        const u = getUnitPrice(product, sizeSel.value);
+        const u = getUnitPrice(product, sizeSel.value, colorSel.value);
+        priceEl.dataset.unitPrice = String(u);
+        priceEl.textContent = Number(u).toLocaleString('es-AR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+        updateSubtotal();
+      };
+
+      // Cambiar color en modal (safe)
+      colorSel.onchange = () => {
+        const cname = colorSel.value;
+        let imgUrl = product.image;
+        if (product.images) {
+          imgUrl = product.images[cname] || imgUrl;
+          if (imgUrl === product.image) {
+            for (const k of Object.keys(product.images)) {
+              if (((typeof fixText==='function')?fixText(k):k) === cname) { imgUrl = product.images[k]; break; }
+            }
+          }
+        }
+        const img = document.getElementById('review-image');
+        if (img) img.src = imgUrl;
+        const u = getUnitPrice(product, sizeSel.value, cname);
         priceEl.dataset.unitPrice = String(u);
         priceEl.textContent = Number(u).toLocaleString('es-AR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
         updateSubtotal();
