--- a/ayuda.html
+++ b/ayuda.html
@@ -76,9 +76,15 @@
             .cart-icon-btn:focus-visible { outline:3px solid #fff; outline-offset:2px; }
             #cart-count { background: var(--danger); color:#fff; border-radius:999px; padding:0 6px; font-size:.8rem; position:absolute; top:-8px; right:-8px; min-width:18px; text-align:center; }
             /* Search */
-            .global-search { display:flex; align-items:center; gap:8px; margin-left: 15px; }
+            .global-search { display:flex; align-items:center; gap:8px; margin-left: 15px; position: relative; }
             .global-search input[type="search"] { padding:6px 10px; border:1px solid #ddd; border-radius:8px; min-width: 220px; }
             .global-search button { padding: 7px 12px; border-radius:8px; border:1px solid var(--primary); background:#fff; color: var(--primary); cursor:pointer; }
+            .search-suggestions { position:absolute; top:100%; left:0; right:0; background:#fff; border:1px solid #ddd; border-radius:8px; box-shadow:0 6px 18px rgba(0,0,0,.12); padding:6px 0; z-index:2001; }
+            .search-suggestion { display:flex; align-items:center; gap:8px; padding:8px 10px; cursor:pointer; }
+            .search-suggestion i { color:#adb5bd; }
+            .search-suggestion:hover, .search-suggestion.active { background:#f1f3f5; }
+            .search-suggestion .t { line-height:1.1; }
+            .search-suggestion small { color:#6c757d; }
         
         nav { background:#fff; box-shadow:0 2px 5px rgba(0,0,0,.1); position:sticky; top:72px; z-index:999; }
         
