--- a/index.html
+++ b/index.html
@@ -134,6 +134,21 @@
     @media (prefers-reduced-motion: reduce) {
       * { animation-duration: 0.001ms !important; animation-iteration-count: 1 !important; transition-duration: 0.001ms !important; }
     }
+    /* Visual refresh to match product detail */
+    body { background: #fff1f6; }
+    header { box-shadow: 0 4px 14px rgba(0,0,0,.12); }
+    .global-search input[type="search"] { padding:10px 14px; border:1px solid rgba(255,255,255,.6); background:rgba(255,255,255,.15); color:#fff; border-radius:999px; min-width:260px; outline:none; }
+    .global-search input::placeholder { color:#f8f9fa; opacity:.85; }
+    .global-search button { padding:8px 14px; border-radius:999px; border:1px solid rgba(255,255,255,.6); background:#fff; color:var(--primary); cursor:pointer; font-weight:700; }
+    .hero { background: transparent; padding: 16px 0 10px; text-align:center; }
+    .hero h1 { font-size: 2.2rem; color:#1b1f24; margin: 4px 0 6px; font-weight: 900; }
+    .hero p { color:#6c757d; max-width: 760px; margin: 0 auto; }
+    .products-grid { gap: 24px; }
+    .product-card { border-radius: 14px; box-shadow: 0 14px 36px rgba(0,0,0,.10); }
+    .product-image { height: 300px; background:#f8f9fb; }
+    .product-title { font-size: 1.15rem; color:#111; }
+    .product-price { font-size: 1.25rem; color: var(--secondary); font-weight: 800; }
+    .btn.btn-primary { background: linear-gradient(135deg, var(--primary), var(--secondary)); box-shadow: 0 8px 18px rgba(111,66,193,.25); }
   </style>
 </head>
 <body
@@ -170,6 +185,10 @@
   </nav>
 
   <div class="container">
+    <section class="hero" aria-label="Presentación catálogo">
+      <h1>Catálogo ROMIX</h1>
+      <p>Encontrá calzas, tops, camperas y más. Seleccioná color y talle, revisá disponibilidad en vivo y sumalo al carrito.</p>
+    </section>
     <div id="feedback" class="hidden" role="status" aria-live="polite" style="margin-bottom:10px;color:#c00;"></div>
 
     <section id="cart" class="cart-section hidden" role="region" aria-label="Carrito de compras">
